syntax = "proto3";
package streaming.grpc;

message Story {
  int32 id = 1;
  int32 score = 2;
  string title = 3;
  string by = 4;
  int32 time = 5;
  string url = 6;
}

service News {
  rpc ListStories (ListStoriesRequest) returns (stream ListStoriesResponse);
}

message ListStoriesRequest {}

message ListStoriesResponse {
  Story story = 1;
}